Fix ticket relation consistency
